welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:13: error: Unmatched closing brace '}' ignored here
 }
 ^